generated_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skyline-ingress
  namespace: skyline
  labels:
    app: skyline
    managed-by: amazon-q-ai
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:646558765106:certificate/a6b78edc-d61d-4e6c-9aa5-d2344870e68e
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
  - host: www.greenbespinglobal.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skyline-service
            port:
              number: 80
---
